/*
 * $Id: ChangeLog,v 1.3396 2004/09/03 08:14:11 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-09-03 10:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbffpt/dbffpt1.c
   * yet another small modifications to make the code a little bit simpler

2004-09-03 10:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbrddfpt.h
  * xharbour/source/rdd/dbffpt/dbffpt1.c
   + added some new types for flex arrays - it seems to be never
     ending process - some technical docs please!!!
   * small fix in hb_fptGetValue() when HB_FPT_USE_READLOCK enabled
   * do not lock memo file for reading when the database/record is
     locked it will improve the speed for some operations.

2004-09-03 00:00 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/rtl/regex.c
    ! Fixed HB_AtX() by circumventing an odd bug in in regex engine (not adding offset when found string in in relative position 0)
      /* TODO need to check other RegEx search functions and apply same hack. */
    * Corrected 4th param to be inclusive end position.
    * Corrected but in returned 3rd BYREF (was adding offset)
  * tests/tstregex.prg
    * Minor correction
  * source/vm/arrayshb.c
    ! Fixed typo in hb_ArrayToStructure()
  * utils/xbscript/xbscript.prg
    * Untracked revison

2004-09-03 14:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rdd/dbffpt/dbffpt1.c
    +  added support for #define HB_FPT_USE_READLOCK & #define HB_FPT_NO_READLOCK
    +  added hb_fptReadLock() & hb_fptReadUnLock()
       Solves speed problem on Windows in shared network environment when a lot of memo
       data is being read. Less "safe" than default build but necessary to get
       acceptable performance when large databases with many memo fields are being read.
