@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3396 2004/09/03 08:14:11 druzus Exp $
+ * $Id: ChangeLog,v 1.3397 2004/09/03 08:39:51 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-09-03 15:55 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
+  + xharbour/bin/pack_src.bat
+  + xharbour/bin/pack_bin.bat
+  - xharbour/bin/!pack_src.bat
+  - xharbour/bin/!pack_bin.bat
+    * renamed and updated with the new directories
+  * pack_src.sh
+    * updated with the new directories
 
 2004-09-03 10:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/source/rdd/dbffpt/dbffpt1.c
